--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,10 +1,10 @@
 {
   "lang": "zh",
-  "start": "开始游戏",
+  "start": "開始折磨",
   "normal": "普通模式",
-  "endless": "无尽模式",
-  "practice": "练习模式",
-  "settings": "游戏设置",
+  "endless": "無盡折磨",
+  "practice": "練習兩年半",
+  "settings": "Option",
   "img-before": "点击前图",
   "img-after": "点击后图",
   "sound-on": "音效: 开启",
@@ -15,15 +15,15 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
-  "default-dfjk": "默认为DFJK",
-  "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
-  "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "eat-kano": "追擊hello kitten",
+  "default-dfjk": "默認鍵位DFJK",
+  "default-20s": "默認時間20秒",
+  "game-title": "追擊hello kitten",
+  "game-intro1": "從最底下開始擊殺",
+  "game-intro2": "看看你能擊殺多少隻",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
-  "time-up": "时间到",
+  "time-up": "time stop",
   "calculating": "计算中",
   "score": "得分",
   "best": "最佳",
@@ -31,11 +31,11 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "菜就多練?",
+  "text-level-2": "一般水平",
+  "text-level-3": "比起英俊的作者還差點",
+  "text-level-4": "有點厲害",
+  "text-level-5": "練習了兩年半了吧",
   "time-over": "倒计时多了",
   "rank-title": "吃掉小鹿乃-排行榜",
   "query-record": "查询记录",
@@ -48,7 +48,7 @@
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
   "all-ranking": "总榜",
-  "source-code": "源码",
+  "source-code": "開發源碼",
   "query-input": "要查询的名字",
   "search-btn": "查询",
   "no-data": "现在还没有数据",
