--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -5,7 +5,7 @@
   "endless": "无尽模式",
   "practice": "练习模式",
   "settings": "游戏设置",
-  "img-before": "点击前图",
+  "img-before": "点前图",
   "img-after": "点击后图",
   "sound-on": "音效: 开启",
   "sound-off": "音效: 关闭",
